// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Render custom header 1`] = `
<div>
  <div
    class="Header__WrapperStyled-sc-1e5fucl-0 gqwNmP"
  >
    <header
      class="Header__HeaderStyled-sc-1e5fucl-1 fJqWDQ"
    >
      My Portfolio
    </header>
    <div
      class="Header__HeaderInfo-sc-1e5fucl-2 zCCez"
    >
      <div>
        My Header
      </div>
    </div>
  </div>
</div>
`;

exports[`Header Render default header 1`] = `
<div>
  <div
    class="Header__WrapperStyled-sc-1e5fucl-0 gqwNmP"
  >
    <header
      class="Header__HeaderStyled-sc-1e5fucl-1 fJqWDQ"
    >
      My Portfolio
    </header>
    <div
      class="Header__HeaderInfo-sc-1e5fucl-2 zCCez"
    >
      Enter an Ethereum address to get started
    </div>
  </div>
</div>
`;
